[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/components/ComponentNumberImput.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/components/ComponentCharacterAttribute.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Attribute" type="PanelContainer"]
margin_right = 95.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 88.0
margin_bottom = 88.0
size_flags_vertical = 5
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 79.0
margin_bottom = 79.0
size_flags_vertical = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonName" type="ToolButton" parent="MarginContainer/VBoxContainer"]
margin_right = 77.0
margin_bottom = 22.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_styles/normal = SubResource( 1 )
text = "atributo"

[node name="Input" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 9.0
margin_top = 26.0
margin_right = 67.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "8"
value = 8

[node name="LabelMod" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 77.0
margin_bottom = 77.0
size_flags_horizontal = 7
size_flags_vertical = 7
text = "+0"
align = 1
valign = 1

[connection signal="editing_stopped" from="MarginContainer/VBoxContainer/Input" to="." method="_on_Input_editing_stopped"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Input" to="." method="_on_Input_value_changed"]
